// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLight> global render should render 1`] = `
.c1 {
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 500;
  line-height: 1.125rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  color: #474747;
  background-color: #f6f6f6;
  cursor: pointer;
  border: solid transparent;
  border-width: 2px;
  border-radius: 4px;
  line-height: 1.75;
  padding: 6px 16px;
  min-width: 64px;
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
}

.c0:hover {
  color: #474747;
  border-color: transparent;
  background-color: #e7e7e7;
  -webkit-transition: border-color .1s ease-in-out,background-color .1s ease-in-out;
  transition: border-color .1s ease-in-out,background-color .1s ease-in-out;
}

.c0:active {
  color: #474747;
  border-color: #d6d6d6;
  background-color: #e7e7e7;
  -webkit-transition: color .1s ease-in-out,background-color .1s ease-in-out;
  transition: color .1s ease-in-out,background-color .1s ease-in-out;
}

.c0:disabled span {
  pointer-events: none;
}

.c0:disabled:hover {
  border-color: transparent;
}

<ButtonLight>
  <Component
    colors={
      Object {
        "background": Object {
          "primary": "#f6f6f6",
          "secondary": "#e7e7e7",
          "tertiary": "#fafafa",
        },
        "border": Object {
          "primary": "#d6d6d6",
          "secondary": "#f6f6f6",
          "tertiary": "#9b9b9b",
        },
        "text": Object {
          "primary": "#474747",
        },
      }
    }
  >
    <BaseButton
      theme={
        Object {
          "active": Object {
            "background": "#e7e7e7",
            "border": "#d6d6d6",
          },
          "background": "#f6f6f6",
          "color": "#474747",
          "disabled": Object {
            "background": "#fafafa",
            "color": "#9b9b9b",
          },
          "hover": Object {
            "background": "#e7e7e7",
          },
        }
      }
    >
      <styled.button
        theme={
          Object {
            "active": Object {
              "background": "#e7e7e7",
              "border": "#d6d6d6",
            },
            "background": "#f6f6f6",
            "color": "#474747",
            "disabled": Object {
              "background": "#fafafa",
              "color": "#9b9b9b",
            },
            "hover": Object {
              "background": "#e7e7e7",
            },
          }
        }
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": false,
                "lastClassName": "ihHKFu",
                "rules": Array [
                  "
  color: ",
                  [Function],
                  ";
  background-color: ",
                  [Function],
                  ";
  cursor: ",
                  [Function],
                  "
  border: solid ",
                  "transparent",
                  ";
  border-width: ",
                  [Function],
                  ";
  border-radius: 4px;  
  line-height: 1.75;
  padding: ",
                  [Function],
                  ";
  min-width: 64px;
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  display: inline-flex;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: 0;
  &:hover {
    color: ",
                  [Function],
                  ";
    border-color: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
    transition: border-color .1s ease-in-out, background-color .1s ease-in-out;;
  }
  &:active {
     color: ",
                  [Function],
                  ";
     border-color: ",
                  [Function],
                  ";
     background-color: ",
                  [Function],
                  ";
     transition: color .1s ease-in-out, background-color .1s ease-in-out;
  }
  
  &:disabled {
    span {
      pointer-events: none;
    }
    &:hover {
      border-color: ",
                  "transparent",
                  ";
    }
  }
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "active": Object {
                "background": "#e7e7e7",
                "border": "#d6d6d6",
              },
              "background": "#f6f6f6",
              "color": "#474747",
              "disabled": Object {
                "background": "#fafafa",
                "color": "#9b9b9b",
              },
              "hover": Object {
                "background": "#e7e7e7",
              },
            }
          }
        >
          <button
            className="c0"
          >
            <styled.span>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  ",
                        "
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
",
                        "
  font-weight: 500;
  line-height: 1.125rem;
  font-size: ",
                        [Function],
                        ";
  display: flex;
",
                      ],
                    },
                    "displayName": "styled.span",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </styled.span>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonLight>
`;

exports[`<ButtonLight> global render should render 2`] = `
.c1 {
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 500;
  line-height: 1.125rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  color: #474747;
  background-color: transparent;
  cursor: pointer;
  border: solid transparent;
  border-width: 1px;
  border-radius: 4px;
  line-height: 1.75;
  padding: 6px 16px;
  min-width: 64px;
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
}

.c0:hover {
  color: #474747;
  border-color: #f6f6f6;
  background-color: transparent;
  -webkit-transition: border-color .1s ease-in-out,background-color .1s ease-in-out;
  transition: border-color .1s ease-in-out,background-color .1s ease-in-out;
}

.c0:active {
  color: #474747;
  border-color: transparent;
  background-color: #f6f6f6;
  -webkit-transition: color .1s ease-in-out,background-color .1s ease-in-out;
  transition: color .1s ease-in-out,background-color .1s ease-in-out;
}

.c0:disabled span {
  pointer-events: none;
}

.c0:disabled:hover {
  border-color: transparent;
}

<ButtonLight
  variant="text"
>
  <Component
    colors={
      Object {
        "background": Object {
          "primary": "#f6f6f6",
          "secondary": "#e7e7e7",
          "tertiary": "#fafafa",
        },
        "border": Object {
          "primary": "#d6d6d6",
          "secondary": "#f6f6f6",
          "tertiary": "#9b9b9b",
        },
        "text": Object {
          "primary": "#474747",
        },
      }
    }
    variant="text"
  >
    <BaseButton
      theme={
        Object {
          "active": Object {
            "background": "#f6f6f6",
            "color": "#474747",
          },
          "background": "transparent",
          "color": "#474747",
          "disabled": Object {
            "color": "#9b9b9b",
          },
          "hover": Object {
            "background": "transparent",
            "border": "#f6f6f6",
          },
        }
      }
      variant="text"
    >
      <styled.button
        theme={
          Object {
            "active": Object {
              "background": "#f6f6f6",
              "color": "#474747",
            },
            "background": "transparent",
            "color": "#474747",
            "disabled": Object {
              "color": "#9b9b9b",
            },
            "hover": Object {
              "background": "transparent",
              "border": "#f6f6f6",
            },
          }
        }
        variant="text"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  color: ",
                  [Function],
                  ";
  background-color: ",
                  [Function],
                  ";
  cursor: ",
                  [Function],
                  "
  border: solid ",
                  "transparent",
                  ";
  border-width: ",
                  [Function],
                  ";
  border-radius: 4px;  
  line-height: 1.75;
  padding: ",
                  [Function],
                  ";
  min-width: 64px;
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  display: inline-flex;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: 0;
  &:hover {
    color: ",
                  [Function],
                  ";
    border-color: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
    transition: border-color .1s ease-in-out, background-color .1s ease-in-out;;
  }
  &:active {
     color: ",
                  [Function],
                  ";
     border-color: ",
                  [Function],
                  ";
     background-color: ",
                  [Function],
                  ";
     transition: color .1s ease-in-out, background-color .1s ease-in-out;
  }
  
  &:disabled {
    span {
      pointer-events: none;
    }
    &:hover {
      border-color: ",
                  "transparent",
                  ";
    }
  }
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "active": Object {
                "background": "#f6f6f6",
                "color": "#474747",
              },
              "background": "transparent",
              "color": "#474747",
              "disabled": Object {
                "color": "#9b9b9b",
              },
              "hover": Object {
                "background": "transparent",
                "border": "#f6f6f6",
              },
            }
          }
          variant="text"
        >
          <button
            className="c0"
          >
            <styled.span>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  ",
                        "
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
",
                        "
  font-weight: 500;
  line-height: 1.125rem;
  font-size: ",
                        [Function],
                        ";
  display: flex;
",
                      ],
                    },
                    "displayName": "styled.span",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </styled.span>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonLight>
`;
